--- a/package.json
+++ b/package.json
@@ -111,7 +111,8 @@
 		"react-draft-wysiwyg": "^1.13.2",
 		"react-flexbox-grid": "^2.0.0",
 		"react-redux": "^7.1.1",
-		"react-router-dom": "^4.3.1",
+		"react-router": "^5.1.2",
+		"react-router-dom": "^5.1.2",
 		"react-rte": "^0.16.1",
 		"react-slick": "^0.23.2",
 		"redux": "^4.0.4",
