--- a/package.json
+++ b/package.json
@@ -62,10 +62,12 @@
 		"rollup": "^0.58.2",
 		"rollup-plugin-babel": "^4.3.2",
 		"rollup-plugin-commonjs": "^9.3.4",
+		"rollup-plugin-filesize": "^6.2.1",
 		"rollup-plugin-json": "^3.1.0",
 		"rollup-plugin-node-resolve": "^3.4.0",
 		"rollup-plugin-postcss": "^1.6.2",
 		"rollup-plugin-replace": "^2.0.0",
+		"rollup-plugin-terser": "^5.1.2",
 		"webpack": "^4.15.1",
 		"webpack-cli": "^3.0.8",
 		"webpack-dev-server": "^3.1.4",
@@ -74,7 +76,7 @@
 	"scripts": {
 		"start": "webpack-dev-server --hot --inline --mode development",
 		"release": "npm run build:dev && npm run build:prod",
-		"build:prod": "cross-env NODE_ENV=production rollup -c",
+		"build:prod": "npm run clean && cross-env NODE_ENV=production rollup -c",
 		"build:dev": "cross-env NODE_ENV=development rollup -c",
 		"test": "jest",
 		"test:coverage": "jest --coverage --watchAll",
