--- a/package.json
+++ b/package.json
@@ -116,7 +116,10 @@
 		"react-router": "^5.1.2",
 		"react-router-dom": "^5.1.2",
 		"react-rte": "^0.16.1",
+		"react-select": "^3.0.8",
+		"react-select-virtualized": "^2.3.12",
 		"react-slick": "^0.23.2",
+		"react-virtualized": "^9.21.1",
 		"redux": "^4.0.4",
 		"redux-form": "^8.2.6",
 		"redux-mock-store": "^1.5.3",
